form prepared for modal

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -1,3 +1,6 @@
+@import url("./admin.css");
+@import url("./modal.css");
+
 .App {
   max-width: 960px;
   margin: 0 auto;
@@ -8,9 +11,7 @@ img {
   height: auto;
 }
 
-#admin .grid {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  column-gap: 24px;
-  row-gap: 24px;
+.input-field {
+  display: block;
+  padding: 8px;
 }
