courses on admin loading

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -11,8 +11,8 @@ img {
   height: auto;
 }
 .colour_block {
-  max-width: 100%;
-  height: auto;
+  width: 240px;
+  height: 240px;
   background-color: coral;
 }
 .input-field {
