--- a/src/styles/admin.css
+++ b/src/styles/admin.css
@@ -4,3 +4,19 @@
   column-gap: 24px;
   row-gap: 24px;
 }
+
+.colour-block {
+  border-radius: 12px;
+  width: 240px;
+  height: 240px;
+  background: linear-gradient(to right, #bfa8bb, #8cdba9);
+}
+
+.course-admin {
+  padding-top: 180px;
+  padding-left: 8px;
+}
+
+.course-admin h3 {
+  margin-top: 5px;
+}
