--- a/src/styles/CoursePage.css
+++ b/src/styles/CoursePage.css
@@ -5,7 +5,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: linear-gradient(to right, #bfa8bb, #8cdba9);
+  background: linear-gradient(to right, #a44f30, #c4a092);
   background-position: center center;
   background-repeat: no-repeat;
   background-attachment: fixed;
