--- a/src/styles/admin.css
+++ b/src/styles/admin.css
@@ -9,7 +9,7 @@
   border-radius: 12px;
   width: 240px;
   height: 240px;
-  background: linear-gradient(to right, #bfa8bb, #8cdba9);
+  background: linear-gradient(to right, #a44f30, #c4a092);
 }
 
 .course-admin {
